--- a/apple/styles/apple.css
+++ b/apple/styles/apple.css
@@ -153,7 +153,8 @@
   );
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: cover;
+  background-size: 100%;
+  aspect-ratio: 1/0.1927550681289465;
 }
 
 .iphone15-pro-bg {
