--- a/apple/styles/apple.css
+++ b/apple/styles/apple.css
@@ -153,8 +153,7 @@
   );
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: 100%;
-  aspect-ratio: 1/0.1927550681289465;
+  background-size: cover;
 }
 
 .iphone15-pro-bg {
